# alfa.rs

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_SUMMARY.md  README.md  pyproject.toml  test_diagnostic.py  test_import.py  test_python_bindings.py
alfars/: __init__.py  __init__.pyi  __main__.py  _fallback.py  lab.py  server.py
alpha_expr/: __init__.py  _fallback.py
benches/: expression.rs  optimizer.rs  timeseries.rs
examples/: alpha101.md  alpha101_example.py  alpha101_expr.py  alpha101_test.py  alpha158.md  alpha158_example.py  alpha191_example.py  basic_usage.py  full_workflow_example.py  gp_benchmark.py  lazy_example.py  polars_style_backtest.rs  python_binding_demo.py  server.rs  test_weighted_close_ratio.py  wcr_backtest.rs
exprs/: __init__.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  chart.ts  main.ts  style.css  types.ts
src/: al_parser.rs  alpha.rs  alpha_evaluation.rs  backtest.rs  clickhouse_provider.rs  dim.rs  evaluation.rs  executor.rs  expr.rs  expr_optimizer.rs  factor.rs  factor_store.rs  ga.rs  ga_full.rs  ga_new.rs  gp.rs  lab.rs  lazy.rs  lib.rs  logical_plan.rs  metalearning.rs  optimizer.rs  persistence.rs  polars_style.rs  python_bindings_complex.rs  symbolic_regression.rs  timeseries_backup.rs
src/al/: mod.rs  parser.rs  store.rs
src/backtest/: config.rs  engine.rs  metrics.rs  mod.rs  portfolio.rs  types.rs
src/data/: clickhouse.rs  convention.rs  derivation.rs  frequency.rs  layer.rs  mod.rs  pool.rs  source.rs
src/expr/: ast.rs  mod.rs  optimizer.rs  registry.rs
src/expr/registry/: config.rs  functions.rs  mod.rs  parser.rs  timeseries.rs
src/gp/: engine.rs  evolution.rs  fitness.rs  generator.rs  history.rs  metalearning.rs  mod.rs  operators.rs  pool.rs  types.rs
src/lazy/: engine.rs  executor.rs  frame.rs  mod.rs  optimizer.rs  plan.rs
src/opt/: cost_model.rs  mod.rs  mvo.rs  risk_parity.rs  solver.rs
src/optimizer/: alpha.rs  attribution.rs  black_litterman.rs  constraints.rs  cost_model.rs  covariance.rs  equal.rs  mod.rs  risk_parity.rs  solver.rs
src/risk/: attribution.rs  barra.rs  cov_estimation.rs  mod.rs  simple.rs  stress.rs
src/strat/: compression.rs  equal.rs  ic_based.rs  pca.rs  regression.rs  ridge.rs  state_aware.rs
src/strategy/: compression.rs  equal.rs  ic_based.rs  mod.rs  pca.rs  regression.rs  ridge.rs  state_aware.rs
src/types/: dataframe.rs  mod.rs  polars_style.rs  series.rs
src_backup/: alpha.rs  alpha_evaluation.rs  alpha_expr_backtest_demo.rs  alpha_expression_evaluation_demo.rs  basic.rs  clickhouse_provider.rs  config.rs  data_provider.rs  dim.rs  evaluation.rs  executor.rs  expr_cache_and_lru_test.rs  expression_optimization_demo.rs  ga.rs  ga_basic.rs  ga_integration_test.rs  optimizer.rs  optimizer_test.rs  python_bindings.rs  quantile_backtest.rs  simple_backtest_demo.rs  timeseries.rs  wcr_backtest_simple.rs  wcr_clickhouse_test.rs  wcr_dummy_test.rs
src_backup/benches/: expression.rs
tests/: alpha_expression_evaluation_test.rs  basic.rs  dimension_test.rs  executor_window_test.rs  ga_integration_test.rs  ga_tree_pipeline_test.rs  ga_tree_test.rs  strategy_integration_test.rs  stress_test_all_alphas.py  test_10factor_batch5.py  test_alpha_debug.py  test_basic.py  test_comprehensive_api.py  test_diagnostic.py  test_fault_tolerance.py  test_gp_config.py  test_import.py  test_lazy_executor.py  test_multi_alpha_streaming.py  test_new_features.py  test_python_bindings.py  test_single_alpha_streaming.py  test_top_level_api.py  test_wcr.py  test_wcr_streaming.py
