[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alpha-expr"
version = "0.1.0"
description = "High-performance factor expression and backtesting library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "tip", email = "tip@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "jupyter>=1.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/yourusername/alpha-expr"
Repository = "https://github.com/yourusername/alpha-expr"

[tool.maturin]
module-name = "alpha_expr._core"
features = ["pyo3/extension-module"]