[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alfars"
version = "0.4.0"
description = "High-performance factor expression and backtesting library (Rust + PyO3)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "EthanNOV56", email = "yichen_1226@163.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "jupyter>=1.1.1",
    "numpy>=1.20",
    "pandas>=1.3",
    "polars>=1.8.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "jupyter>=1.0",
    "matplotlib>=3.5",
]

[project.scripts]
alfars-lab = "alfars.lab:main"

[project.urls]
Homepage = "https://github.com/EthanNOV56/alfa.rs"
Repository = "https://github.com/EthanNOV56/alfa.rs"

[project.aliases]
alfars = "alfars"

[tool.maturin]
module-name = "alfars._core"
features = ["pyo3/extension-module"]
